--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: postgres
     restart: always
     environment:
-      POSTGRES_DB: MYDB
+      POSTGRES_DB: JDBC
       POSTGRES_USER: sagar
       POSTGRES_PASSWORD: sagar123
     volumes:
